@@ -3,21 +3,20 @@
 
 package com.microsoft.typespec.http.client.generator.core.extension.plugin;
 
-import com.azure.core.util.CoreUtils;
-import com.azure.json.JsonProviders;
-import com.azure.json.JsonReader;
-import com.azure.json.JsonToken;
 import com.microsoft.typespec.http.client.generator.core.mapper.Mappers;
 import com.microsoft.typespec.http.client.generator.core.mapper.azurevnext.AzureVNextMapperFactory;
 import com.microsoft.typespec.http.client.generator.core.mapper.clientcore.ClientCoreMapperFactory;
 import com.microsoft.typespec.http.client.generator.core.template.Templates;
 import com.microsoft.typespec.http.client.generator.core.template.azurevnext.AzureVNextTemplateFactory;
 import com.microsoft.typespec.http.client.generator.core.template.clientcore.ClientCoreTemplateFactory;
+import io.clientcore.core.serialization.json.JsonReader;
+import io.clientcore.core.serialization.json.JsonToken;
+import io.clientcore.core.utils.CoreUtils;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -35,7 +34,7 @@ public class JavaSettings {
     private static JavaSettings instance;
     private static NewPlugin host;
     private static String header;
-    private static final Map<String, Object> SIMPLE_JAVA_SETTINGS = new HashMap<>();
+    private static final Map<String, Object> SIMPLE_JAVA_SETTINGS = new LinkedHashMap<>();
     private static Logger logger;
     private final boolean useKeyCredential;
     private final String flavor;
@@ -71,7 +70,7 @@ public class JavaSettings {
         }
     }
 
-    static void setHost(NewPlugin host) {
+    public static void setHost(NewPlugin host) {
         JavaSettings.host = host;
         logger = new PluginLogger(host, JavaSettings.class);
     }
@@ -123,7 +122,7 @@ public class JavaSettings {
 
     private static Map<Integer, String> parseStatusCodeMapping(JsonReader jsonReader) throws IOException {
         return jsonReader.readObject(reader -> {
-            Map<Integer, String> mapping = new HashMap<>();
+            Map<Integer, String> mapping = new LinkedHashMap<>();
             while (reader.nextToken() != JsonToken.END_OBJECT) {
                 int key = Integer.parseInt(reader.getFieldName());
                 reader.nextToken();
@@ -650,7 +649,7 @@ public class JavaSettings {
          * @param settings The settings that are used by the modeler.
          */
         public ModelerSettings(Map<String, Object> settings) {
-            this.settings = settings == null ? Collections.emptyMap() : settings;
+            this.settings = settings == null ? Map.of() : settings;
         }
 
         /**
@@ -1524,7 +1523,7 @@ public class JavaSettings {
         return useObjectForUnknown;
     }
 
-    private final Map<String, String> renameModel = new HashMap<>();
+    private final Map<String, String> renameModel = new LinkedHashMap<>();
 
     public Map<String, String> getJavaNamesForRenameModel() {
         return renameModel;
@@ -1595,7 +1594,7 @@ public class JavaSettings {
                 return null;
             } else if (jsonString.startsWith("[")) {
                 // Array values will need to be parsed.
-                try (JsonReader jsonReader = JsonProviders.createReader(jsonString)) {
+                try (JsonReader jsonReader = JsonReader.fromString(jsonString)) {
                     List<String> settingValueList = jsonReader.readArray(JsonReader::getString);
                     logger.debug("Option, array, {} : {}", settingName, settingValueList);
                     action.accept(settingValueList);
@@ -1603,7 +1602,7 @@ public class JavaSettings {
             } else {
                 // Single values will be returned as the string representation.
                 logger.debug("Option, string, {} : {}", settingName, jsonString);
-                action.accept(Collections.singletonList(jsonString));
+                action.accept(List.of(jsonString));
             }
 
             return null;
